# rapidgeo

./: .gitignore  .readthedocs.yaml  .tarpaulin.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml  wheels.yml
example-notebooks/: coordinate-parsing.ipynb
map-distance/: Cargo.toml  README.md
map-distance/benches/: distance_benchmarks.rs
map-distance/examples/: batch_processing.rs  error_handling.rs  haversine_distance.rs  memory_efficient.rs  parallel_computation.rs  point_to_line_distance.rs  vincenty_precision.rs
map-distance/src/: batch.rs  euclid.rs  geodesic.rs  lib.rs
rapidgeo-distance/: Cargo.toml  README.md
rapidgeo-distance/benches/: distance_benchmarks.rs
rapidgeo-distance/src/: batch.rs  euclid.rs  format_batch.rs  formats.rs  lib.rs
rapidgeo-distance/src/geodesic/: haversine.rs  mod.rs  point_to_segment.rs  vincenty.rs
rapidgeo-polyline/: Cargo.toml
rapidgeo-polyline/benches/: performance_benchmarks.rs  polyline_benchmarks.rs
rapidgeo-polyline/src/: batch.rs  decode.rs  encode.rs  error.rs  lib.rs  simplify.rs
rapidgeo-py/: .readthedocs.yaml  Cargo.toml  NUMPY_USAGE.md  README.md  pyproject.toml  test_rapidgeo.py
rapidgeo-py/docs/: conf.py  examples.rst
rapidgeo-py/python/rapidgeo/: __init__.py
rapidgeo-py/python/rapidgeo/distance/: batch.py  geo.py
rapidgeo-py/python/rapidgeo/formats/: __init__.py
rapidgeo-py/python/rapidgeo/numpy/: __init__.py
rapidgeo-py/python/rapidgeo/polyline/: __init__.py
rapidgeo-py/python/rapidgeo/similarity/: frechet.py
rapidgeo-py/src/: distance.rs  formats.rs  lib.rs  numpy_batch.rs  polyline.rs  simplify.rs
rapidgeo-py/tests/: test_distance.py  test_numpy.py  test_polyline.py  test_rapidgeo.py
rapidgeo-similarity/: Cargo.toml  README.md
rapidgeo-similarity/benches/: similarity_benchmarks.rs
rapidgeo-simplify/: Cargo.toml
rapidgeo-simplify/benches/: simplify_benchmarks.rs
rapidgeo-simplify/src/: batch.rs  dp.rs  lib.rs  xt.rs
