[workspace]
resolver = "2"
members = [
    "rapidgeo-distance",
    "rapidgeo-simplify",
    "rapidgeo-polyline",
    "rapidgeo-similarity",
    "rapidgeo-py",
]

[workspace.package]
version = "0.2.5"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["gaker"]
homepage = "https://github.com/gaker/rapidgeo"
repository = "https://github.com/gaker/rapidgeo"

[workspace.dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
rayon = "1.11"
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.9"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
