[package]
name = "rapidgeo-py"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Fast geographic and planar distance calculations with Python bindings"
homepage.workspace = true
repository.workspace = true
keywords = ["distance", "geodesic", "haversine", "vincenty", "geometry"]
categories = ["science::geo", "algorithms"]
publish = false

[lib]
name = "rapidgeo"
crate-type = ["cdylib"]

[features]
default = ["batch"]
vincenty = []
batch = ["rayon", "rapidgeo-distance/batch"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] }
numpy = { version = "0.27" }
rayon = { workspace = true, optional = true }
rapidgeo-distance = { path = "../rapidgeo-distance", features = ["batch"] }
rapidgeo-simplify = { path = "../rapidgeo-simplify", features = ["batch"] }
rapidgeo-polyline = { path = "../rapidgeo-polyline", features = ["batch"] }
rapidgeo-similarity = { path = "../rapidgeo-similarity", features = ["batch"] }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

